# btool

./: .gitignore  README.md  pyproject.toml
pybtool/: log_config.yaml  main.py
pybtool/host/: __init__.py  att.py  hci.py  hci_btsnoop.py  hci_cmd.py  hci_def.py  hci_evt.py  l2cap.py  sm.py
pybtool/host/hci_transport/: __init__.py  transport.py  uart_interface.py  usb_interface.py
src/pybtool/: main.py
src/pybtool/host/: gatt.py  hci.py  l2cap.py  rfcomm.py  sdp.py
src/pybtool/host/hci_interface/: __init__.py  hci.py  uart.py  usb.py
tests/: test_ctypes.py  test_main.py  test_pyusb.py
